[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hpcom"
version = "0.1.7"
authors = [
  { name="Egor Sedov", email="e.sedov@g.nsu.ru" },
]
description = "High performance optical communication library"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
    "Topic :: Scientific/Engineering",
]

[project.urls]
"Homepage" = "https://github.com/esf0/hpcom"
"Bug Tracker" = "https://github.com/esf0/hpcom/issues"